# eekWatch

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
.github/workflows/: rust.yml
rules/: disks.example
src/: config.rs  lib.rs  log.rs  main.rs  rules.rs
src/alerts/: email.rs  logging.rs  mod.rs
src/commands/: disk.rs  mod.rs
src/commands/checks/: disk.rs  mod.rs
