[package]
name = "eekwatch"
version = "0.1.0"
edition = "2021"
authors = ["Winter Faulk <winter@faulk.me>"]
description = "A simple alerting system for monitoring system resources."
rust-version = "1.81.0"
repository = "https://github.com/faulker/eekWatch"
license = "MIT"

[dependencies]
serde = { version = "^1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sysinfo = "0.33.0"
regex = "^1.11.0"
lettre = "0.11.11"
chrono = "0.4.39"
